Editor: Fix border cutoff

--- a/src/editor.less
+++ b/src/editor.less
@@ -63,6 +63,14 @@
     transition: border-color 250ms ease-in-out;
     margin: 0 4px 1px 0 !important;
     
+    .note-detail-editable-text {
+        padding: 0 !important;
+        
+        .note-detail-editable-text-editor {
+            padding: 1em !important;
+        }
+    }
+
     &:hover,
     &:focus-within {
         border-color: var(--breeze-accent-color);
